[package]
name = "mod_io"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[patch."https://github.com/godot-rust/godot4-prebuilt"]
godot4-prebuilt = { git = "https://github.com//godot-rust/godot4-prebuilt", branch = "4.1.2"}

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
modio = { git = "https://github.com/nickelc/modio-rs", branch = "master" }
tokio = { version = "1.32.0", features = ["full"] }